// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonBase handles custom label color 1`] = `
<TouchableOpacity
  accessibilityRole="button"
  accessible={true}
  activeOpacity={1}
  onPress={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#f3f5f9",
      "borderRadius": 12,
      "flexDirection": "row",
      "height": 40,
      "justifyContent": "center",
      "overflow": "hidden",
      "paddingHorizontal": 16,
    }
  }
>
  <Text
    accessibilityRole="none"
    style={
      {
        "color": "#121314",
      }
    }
    variant="sBodyMDMedium"
  >
    Click me!
  </Text>
</TouchableOpacity>
`;

exports[`ButtonBase handles custom label text variant 1`] = `
<TouchableOpacity
  accessibilityRole="button"
  accessible={true}
  activeOpacity={1}
  onPress={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#f3f5f9",
      "borderRadius": 12,
      "flexDirection": "row",
      "height": 40,
      "justifyContent": "center",
      "overflow": "hidden",
      "paddingHorizontal": 16,
    }
  }
>
  <Text
    accessibilityRole="none"
    style={
      {
        "color": "#121314",
      }
    }
    variant="sHeadingSM"
  >
    Click me!
  </Text>
</TouchableOpacity>
`;

exports[`ButtonBase handles different sizes: ButtonBase with size 32 1`] = `
<TouchableOpacity
  accessibilityRole="button"
  accessible={true}
  activeOpacity={1}
  onPress={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#f3f5f9",
      "borderRadius": 12,
      "flexDirection": "row",
      "height": 32,
      "justifyContent": "center",
      "overflow": "hidden",
      "paddingHorizontal": 16,
    }
  }
>
  <Text
    accessibilityRole="none"
    style={
      {
        "color": "#121314",
      }
    }
    variant="sBodyMDMedium"
  >
    Click me!
  </Text>
</TouchableOpacity>
`;

exports[`ButtonBase handles different sizes: ButtonBase with size 40 1`] = `
<TouchableOpacity
  accessibilityRole="button"
  accessible={true}
  activeOpacity={1}
  onPress={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#f3f5f9",
      "borderRadius": 12,
      "flexDirection": "row",
      "height": 40,
      "justifyContent": "center",
      "overflow": "hidden",
      "paddingHorizontal": 16,
    }
  }
>
  <Text
    accessibilityRole="none"
    style={
      {
        "color": "#121314",
      }
    }
    variant="sBodyMDMedium"
  >
    Click me!
  </Text>
</TouchableOpacity>
`;

exports[`ButtonBase handles different sizes: ButtonBase with size 48 1`] = `
<TouchableOpacity
  accessibilityRole="button"
  accessible={true}
  activeOpacity={1}
  onPress={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#f3f5f9",
      "borderRadius": 12,
      "flexDirection": "row",
      "height": 48,
      "justifyContent": "center",
      "overflow": "hidden",
      "paddingHorizontal": 16,
    }
  }
>
  <Text
    accessibilityRole="none"
    style={
      {
        "color": "#121314",
      }
    }
    variant="sBodyMDMedium"
  >
    Click me!
  </Text>
</TouchableOpacity>
`;

exports[`ButtonBase handles different widths 1`] = `
<TouchableOpacity
  accessibilityRole="button"
  accessible={true}
  activeOpacity={1}
  onPress={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#f3f5f9",
      "borderRadius": 12,
      "flexDirection": "row",
      "height": 40,
      "justifyContent": "center",
      "overflow": "hidden",
      "paddingHorizontal": 16,
      "width": 200,
    }
  }
>
  <Text
    accessibilityRole="none"
    style={
      {
        "color": "#121314",
      }
    }
    variant="sBodyMDMedium"
  >
    Click me!
  </Text>
</TouchableOpacity>
`;

exports[`ButtonBase renders when disabled 1`] = `
<TouchableOpacity
  accessibilityRole="button"
  accessible={true}
  activeOpacity={1}
  disabled={true}
  onPress={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#f3f5f9",
      "borderRadius": 12,
      "flexDirection": "row",
      "height": 40,
      "justifyContent": "center",
      "opacity": 0.5,
      "overflow": "hidden",
      "paddingHorizontal": 16,
    }
  }
>
  <Text
    accessibilityRole="none"
    style={
      {
        "color": "#121314",
      }
    }
    variant="sBodyMDMedium"
  >
    Click me!
  </Text>
</TouchableOpacity>
`;

exports[`ButtonBase renders with basic props 1`] = `
<TouchableOpacity
  accessibilityRole="button"
  accessible={true}
  activeOpacity={1}
  onPress={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#f3f5f9",
      "borderRadius": 12,
      "flexDirection": "row",
      "height": 40,
      "justifyContent": "center",
      "overflow": "hidden",
      "paddingHorizontal": 16,
    }
  }
>
  <Text
    accessibilityRole="none"
    style={
      {
        "color": "#121314",
      }
    }
    variant="sBodyMDMedium"
  >
    Click me!
  </Text>
</TouchableOpacity>
`;

exports[`ButtonBase renders with both start and end icons 1`] = `
<TouchableOpacity
  accessibilityRole="button"
  accessible={true}
  activeOpacity={1}
  onPress={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#f3f5f9",
      "borderRadius": 12,
      "flexDirection": "row",
      "height": 40,
      "justifyContent": "center",
      "overflow": "hidden",
      "paddingHorizontal": 16,
    }
  }
>
  <Icon
    color="Default"
    name="Add"
    size="16"
    style={
      {
        "marginRight": 8,
      }
    }
  />
  <Text
    accessibilityRole="none"
    style={
      {
        "color": "#121314",
      }
    }
    variant="sBodyMDMedium"
  >
    Click me!
  </Text>
  <Icon
    color="Default"
    name="ArrowRight"
    size="16"
    style={
      {
        "marginLeft": 8,
      }
    }
  />
</TouchableOpacity>
`;

exports[`ButtonBase renders with custom label component 1`] = `
<TouchableOpacity
  accessibilityRole="button"
  accessible={true}
  activeOpacity={1}
  onPress={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#f3f5f9",
      "borderRadius": 12,
      "flexDirection": "row",
      "height": 40,
      "justifyContent": "center",
      "overflow": "hidden",
      "paddingHorizontal": 16,
    }
  }
>
  <CustomLabel />
</TouchableOpacity>
`;

exports[`ButtonBase renders with end icon 1`] = `
<TouchableOpacity
  accessibilityRole="button"
  accessible={true}
  activeOpacity={1}
  onPress={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#f3f5f9",
      "borderRadius": 12,
      "flexDirection": "row",
      "height": 40,
      "justifyContent": "center",
      "overflow": "hidden",
      "paddingHorizontal": 16,
    }
  }
>
  <Text
    accessibilityRole="none"
    style={
      {
        "color": "#121314",
      }
    }
    variant="sBodyMDMedium"
  >
    Click me!
  </Text>
  <Icon
    color="Default"
    name="Add"
    size="16"
    style={
      {
        "marginLeft": 8,
      }
    }
  />
</TouchableOpacity>
`;

exports[`ButtonBase renders with start icon 1`] = `
<TouchableOpacity
  accessibilityRole="button"
  accessible={true}
  activeOpacity={1}
  onPress={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#f3f5f9",
      "borderRadius": 12,
      "flexDirection": "row",
      "height": 40,
      "justifyContent": "center",
      "overflow": "hidden",
      "paddingHorizontal": 16,
    }
  }
>
  <Icon
    color="Default"
    name="Add"
    size="16"
    style={
      {
        "marginRight": 8,
      }
    }
  />
  <Text
    accessibilityRole="none"
    style={
      {
        "color": "#121314",
      }
    }
    variant="sBodyMDMedium"
  >
    Click me!
  </Text>
</TouchableOpacity>
`;
